<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/comandNameTextView"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:text=""/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:text="@string/deberts"
            android:textAlignment="center"
            android:textColor="#000000" />

        <Button android:id="@+id/incrementDebertsButton"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:text="+"
            android:textAlignment="center"
            android:textSize="9sp" />

        <TextView
            android:id="@+id/deberts_Text_Viev"
            android:layout_width="19dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="5dp"
            android:text="0"
            android:textAlignment="center"
            android:textColor="#000000" />

        <Button android:id="@+id/decrementDebertsButton"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:text="-"
            android:textAlignment="center"
            android:textSize="9sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:text="@string/polt"
            android:textAlignment="center"
            android:textColor="#000000" />

        <Button
            android:id="@+id/incrementPoltButton"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:text="+"
            android:textAlignment="center"
            android:textSize="9sp" />

        <TextView
            android:id="@+id/polt_Text_Viev"
            android:layout_width="19dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="5dp"
            android:text="0"
            android:textAlignment="center"
            android:textColor="#000000" />

        <Button
            android:id="@+id/decrementPoltButton"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:text="-"
            android:textAlignment="center"
            android:textSize="9sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:text="@string/terts"
            android:textAlignment="center"
            android:textColor="#000000" />

        <Button
            android:id="@+id/incrementTertsButton"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:text="+"
            android:textAlignment="center"
            android:textSize="9sp" />

        <TextView
            android:id="@+id/terts_Text_View"
            android:layout_width="19dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="5dp"
            android:text="0"
            android:textAlignment="center"
            android:textColor="#000000" />

        <Button
            android:id="@+id/decrementTertsButton"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:text="-"
            android:textAlignment="center"
            android:textSize="9sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBoxFirstTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layoutDirection="rtl"
            android:text="@string/bella" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="45dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:text="@string/res1"
            android:textAlignment="center"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/result_first_team1"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="#000000" />
    </LinearLayout>

    <Button
        android:id="@+id/button_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result1" />

    <EditText
        android:id="@+id/pointsFirstTeam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>